# rapidlyCode

./: .gitignore  GLCSM.html  README.md  _Replace.bat  _Replace1 - 副本.bat  _Replace1.bat  _Replace2.bat  _Replace_Debug.bat  a.txt  cn2en.html  rule  rule.md  rule2  rule_NPC.md  rule_cash.md  rule_equipment.md  rule_event.md  rule_maple.md  rule_other.md  rule_skill.md  rule_stuff.md  skill_adele.md  新建文本文档.txt
Code/RapidlyCode/: CMakeLists.txt  RapidlyCode.cpp  Windows.bat  cmdline.h
NewRapidlyCode/: README.md  document.txt  example  go.mod  go.sum  hashInfo  main.go  main2.go  rule.go  rule.md
NewRapidlyCode/english/: Node.go  Words.go  are.md  noun.go  sentence.go  sentence.md  sentence_test.go  单词类型分类.md
NewRapidlyCode/rule/: rule.go
NewRapidlyCode/rulefile/: rule.md  skill_Adele.md  skill_Aran.md  skill_Ark.md  skill_Battle_Mage.md  skill_Beast_Tamer.md  skill_Bishop.md  skill_Blaster.md  skill_Blaze_Wizard.md  skill_Bowmaster.md  skill_Buccaneer.md  skill_Cadena.md  skill_Cannoneer.md  skill_Corsair.md  skill_Dark_Knight.md  skill_Dawn_Warrior.md  skill_Demon_Avenger.md  skill_Demon_Slayer.md  skill_Dual_Blade.md  skill_Evan.md  skill_Hayato.md  skill_Hero.md  skill_Hoyoung.md  skill_Illium.md  skill_Jett.md  skill_Kain.md  skill_Kaiser.md  skill_Kanna.md  skill_Kinesis.md  skill_Luminous.md  skill_Magician_(Fire,_Poison).md  skill_Magician_(Ice,_Lightning).md  skill_Marksman.md  skill_Mechanic.md  skill_Mercedes.md  skill_Mihile.md  skill_Night_Lord.md  skill_Night_Walker.md  skill_Paladin.md  skill_Phantom.md  (+9 more)
NewRapidlyCode/trie/: common.go  doc.go  doc_test.go  docnode.go  string_trie.go
Tools/: GLCSM.html  New_GLCSM.html  ad.html  cn2en.html  download2.ip.txt  test.py
Tools/新建文件夹/: link.rul  局部加速.cmd  局部加速.pbk  局部加速2.cmd  断开.cmd  新建文本文档.md
maplestorySkill/: example_test.go  go.mod  go.sum  main.go  skill.db  sql.go
skill/: skill_Adele.md  skill_Angelic_Buster.md  skill_Aran.md  skill_Ark.md  skill_Battle_Mage.md  skill_Beast_Tamer.md  skill_Bishop.md  skill_Blaster.md  skill_Blaze_Wizard.md  skill_Bowmaster.md  skill_Buccaneer.md  skill_Cadena.md  skill_Cannoneer.md  skill_Corsair.md  skill_Dark_Knight.md  skill_Dawn_Warrior.md  skill_Demon_Avenger.md  skill_Demon_Slayer.md  skill_Dual_Blade.md  skill_Evan.md  skill_Hayato.md  skill_Hero.md  skill_Hoyoung.md  skill_Illium.md  skill_Jett.md  skill_Kain.md  skill_Kaiser.md  skill_Kanna.md  skill_Kinesis.md  skill_Luminous.md  skill_Magician_(Fire,_Poison).md  skill_Magician_(Ice,_Lightning).md  skill_Marksman.md  skill_Mechanic.md  skill_Mercedes.md  skill_Mihile.md  skill_Night_Lord.md  skill_Night_Walker.md  skill_Paladin.md  skill_Pathfinder.md  (+10 more)
skillGet/: allURL.py  generate_rule.py  get.py  skill_Bowmaster.md  skill_Pathfinder.md
skillGet/skill_rule/: skill_Adele.md  (+31 more)
(+2 files in other folders)
